--- a/css/Project_66.css
+++ b/css/Project_66.css
@@ -57,8 +57,8 @@ body {
   position: absolute;
   width: 100%;
   height: 100vh;
-  padding-top: 3rem;
   padding-left: 3rem;
+  padding-top: 3rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .content-section h2 {
@@ -74,6 +74,11 @@ body {
 }
 .content-section .underline {
   width: 500px;
+}
+
+body {
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 /*
@@ -331,42 +336,13 @@ index
 =======================
 */
 .index {
-  margin-top: 3rem;
+  position: absolute;
+  left: 0;
+  top: 80px;
   display: grid;
   grid-template-columns: 40% 60%;
-  overflow: hidden;
 }
 
-@media screen and (max-width: 1100px) {
-  .index {
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-  }
-  .index-img {
-    position: relative;
-    top: -20px;
-    display: block;
-    border-radius: 5px;
-    box-shadow: var(--light-shadow);
-  }
-}
-@media screen and (max-width: 768px) {
-  .index {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-  }
-  .index-img {
-    position: relative;
-    top: -20px;
-    display: block;
-    border-radius: 5px;
-    box-shadow: var(--light-shadow);
-  }
-}
 /*
 =======================
 portfolio
@@ -711,8 +687,9 @@ portfolio
 
 .learns {
   position: relative;
-  top: 100px;
-  left: 2rem;
+  width: 100vw;
+  top: 80px;
+  left: 0;
 }
 .learns h4 {
   background-color: var(--clr-green-10);
@@ -748,12 +725,13 @@ portfolio
 .learn {
   height: fit-content;
   margin: 0 auto;
-  width: 85vw;
+  width: 75vw;
   border: 4px dashed var(--clr-grey-7);
   padding: 2rem;
   margin-bottom: 5rem;
   border-radius: 20px;
   background-color: var(--clr-grey-10);
+  position: relative;
 }
 .learn-title {
   width: fit-content;
@@ -782,6 +760,17 @@ portfolio
   display: block;
   max-width: 100%;
   margin: 2rem 0;
+}
+.learn::after {
+  position: absolute;
+  top: -8px;
+  left: -8px;
+  content: "";
+  width: calc(100% + 16px);
+  height: calc(100% + 16px);
+  border: 8px dotted rgb(199, 165, 92);
+  border-radius: 20px;
+  z-index: -1;
 }
 
 .overcome {
@@ -879,6 +868,4 @@ portfolio
   .link_contect {
     display: none;
   }
-}
-
-/*# sourceMappingURL=Project_66.css.map */
+}/*# sourceMappingURL=Project_66.css.map */
