--- a/scss/_global_66.scss
+++ b/scss/_global_66.scss
@@ -57,8 +57,8 @@ body{
     position: absolute;
     width: 100%;
     height: calc(100vh);
-    padding-top: 3rem;
     padding-left: 3rem;
+    padding-top: 3rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     h2{
         font-size: 3rem;
@@ -74,4 +74,9 @@ body{
     .underline{
         width: 500px;
     }
+}
+
+body {
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
