--- a/scss/Project_66.scss
+++ b/scss/Project_66.scss
@@ -316,6 +316,7 @@ portfolio
         font-size: 1.2rem;
         letter-spacing: 0.2rem;
         margin-bottom: 0.5rem;
+        word-wrap: break-all;
     }
     p{
         color: var(--clr-grey-6);
@@ -516,6 +517,7 @@ portfolio
         border: 0.5px solid transparent;
         box-shadow: var(--light-shadow);
         width: fit-content;
+        word-wrap: break-all;
     }
     h3{
         color: var(--clr-grey-4);
@@ -548,7 +550,7 @@ portfolio
         }
         .commentary{
             width: 100vw;
-            word-wrap: break-word;
+            word-wrap: break-all;
             padding: 2rem;
             &:hover{
                 background-color: antiquewhite;
@@ -681,6 +683,7 @@ portfolio
         border: 0.5px solid transparent;
         box-shadow: var(--light-shadow);
         width: fit-content;
+        word-wrap: break-all;
         &:hover{
             background-color: var(--clr-grey-9);
         }
@@ -723,6 +726,7 @@ portfolio
     &-container{
         padding: 1rem;
         width: fit-content;
+        width: 80%;
         &:hover{
             background-color: blanchedalmond;
             border: 2px dashed var(--clr-grey-5);
@@ -734,6 +738,7 @@ portfolio
                 color: rgb(149, 66, 98);
                 margin-top: 2rem;
                 margin-bottom: 0.5rem;
+                word-wrap: break-all;
         }
 
     }
@@ -767,7 +772,7 @@ portfolio
         background-color: blanchedalmond;
         border: 2px dashed var(--clr-grey-5);
         border-radius: 4px;
-        width: 95%;
+        width: 90%;
         margin: 0 auto;
         margin-bottom: 1rem;
         &::after{
@@ -784,6 +789,7 @@ portfolio
         background-color: var(--clr-grey-4);
         box-shadow: none;
         color: white;
+        word-wrap: break-all;
         
     }
     
@@ -807,6 +813,7 @@ portfolio
 .question{
     display: grid;
     grid-template-columns: repeat(auto-fill,300px);
+    justify-content: center;
 }
 
 .dropleft{
@@ -849,6 +856,7 @@ portfolio
     h4{
         margin-right: 1rem;
         font-size: 0.5rem;
+        word-wrap: break-all;
         background-color: rgb(145, 48, 29);
         &:hover{
             background-color: green;
