--- a/css/Project_66.css
+++ b/css/Project_66.css
@@ -353,6 +353,13 @@ portfolio
   height: 100vh;
   position: relative;
 }
+.portfolio_c-option {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 150px);
+  gap: 2rem;
+  margin: 0 auto;
+  width: 100vw;
+}
 .portfolio_c h4 {
   color: var(--clr-grey-5);
   font-size: 1.2rem;
@@ -367,18 +374,14 @@ portfolio
 }
 .portfolio_c .c_button {
   position: relative;
-  margin: 1rem;
-  margin-left: 3rem;
-  max-width: 14rem;
   display: flex;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 2rem;
+  padding: 1rem 0;
   background-color: var(--clr-grey-10);
-  padding: 1.2rem 1rem;
   border-radius: 3px;
   box-shadow: var(--dark-shadow);
+}
+.portfolio_c .c_button h4 {
+  margin: 0 auto;
 }
 .portfolio_c .c_button::after {
   content: "";
@@ -417,8 +420,8 @@ portfolio
 .portfolio_c-container {
   padding-right: 10rem;
   margin-top: 2rem;
-  display: grid;
-  grid-template-columns: 20% 80%;
+  display: flex;
+  flex-direction: column;
   height: 80vh;
   width: 100vw;
 }
