--- a/scss/Project_66.scss
+++ b/scss/Project_66.scss
@@ -310,6 +310,13 @@ portfolio
     top: 80px;
     height: 100vh;
     position: relative;
+    &-option{
+        display: grid;
+        grid-template-columns: repeat(auto-fill,150px);
+        gap: 2rem;
+        margin: 0 auto;
+        width: 100vw;
+    }
     
     h4{
         color: var(--clr-grey-5);
@@ -325,16 +332,12 @@ portfolio
     }
     .c_button{
         position: relative;
-        margin: 1rem;
-        margin-left: 3rem;
-        max-width: 14rem;
         display: flex;
-        text-align: center;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 2rem;
+        padding: 1rem 0;
+        h4{
+            margin: 0 auto;
+        }
         background-color: var(--clr-grey-10);
-        padding: 1.2rem 1rem;
         border-radius: 3px;
         box-shadow: var(--dark-shadow);
         &::after{
@@ -376,8 +379,8 @@ portfolio
     &-container{
         padding-right: 10rem;
         margin-top: 2rem;
-        display: grid;
-        grid-template-columns: 20% 80%;
+        display: flex;
+        flex-direction: column;
         height: 80vh;
         width: 100vw;
     }
