--- a/css/Project_66.css
+++ b/css/Project_66.css
@@ -45,6 +45,7 @@ ul {
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: #ebedf1;
 }
 
 .underline {
@@ -95,7 +96,7 @@ nav
   position: absolute;
   left: 0;
   top: 0;
-  width: 100%;
+  width: 100vw;
   height: 80px;
 }
 .nav-center {
@@ -878,5 +879,125 @@ portfolio
 @media screen and (max-width: 996px) {
   .link_contect {
     display: none;
+  }
+}
+
+/*
+=======================
+resume
+=======================
+*/
+.resume {
+  position: relative;
+  top: 80px;
+  left: 0;
+}
+.resume-container {
+  display: grid;
+  grid-template-columns: 40% 60%;
+  gap: 2rem;
+  padding-bottom: 2rem;
+}
+.resume-container-left-contect {
+  display: flex;
+}
+.resume .underline {
+  max-width: 100vw;
+}
+
+.skill-cotainer {
+  width: 90%;
+  display: grid;
+  place-items: center;
+  position: relative;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+  margin-right: 2rem;
+}
+
+.skill-block {
+  margin-top: 1rem;
+  text-align: center;
+  position: relative;
+  border: 1px solid var(--clr-grey-7);
+  border-radius: 8px;
+  box-shadow: var(--dark-shadow);
+  background-color: var(--clr-grey-9);
+  width: 180px;
+  height: 180px;
+}
+.skill-block::after {
+  content: "";
+  position: absolute;
+  background-color: transparent;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border: 0.25rem solid white;
+  transition: var(--transition);
+  opacity: 0;
+}
+.skill-block:hover {
+  background-color: var(--clr-primary-5);
+}
+.skill-block:hover i {
+  color: white;
+}
+.skill-block:hover h3 {
+  color: whitesmoke;
+}
+.skill-block:hover::after {
+  opacity: 0.2;
+  transform: scale(0.8);
+}
+.skill-block i {
+  font-size: 4rem;
+  color: var(--clr-grey-3);
+}
+.skill-block h3 {
+  font-size: 2rem;
+  color: var(--clr-grey-4);
+  margin-bottom: 1rem;
+}
+
+@media screen and (max-width: 1100px) {
+  .resume {
+    top: 60px;
+  }
+  .resume-container h3 {
+    font-size: 1rem;
+  }
+  .skill-cotainer {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .skill-block h3 {
+    font-size: 2rem;
+  }
+}
+@media screen and (max-width: 996px) {
+  .resume-container h3 {
+    font-size: 0.8rem;
+  }
+  .skill-block {
+    width: 150px;
+    height: 150px;
+  }
+  .skill-block h3 {
+    font-size: 1.5rem;
+  }
+  .skill-block i {
+    font-size: 3rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  .resume {
+    padding-right: 2rem;
+  }
+  .resume-container {
+    display: block;
+  }
+  .resume-container-left-contect {
+    display: grid;
   }
 }/*# sourceMappingURL=Project_66.css.map */
