--- a/scss/_global_66.scss
+++ b/scss/_global_66.scss
@@ -45,6 +45,7 @@ ul{
 
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #ebedf1;
 }
 
 .underline{
