### Design Resume add Timeline

--- a/scss/_global_66.scss
+++ b/scss/_global_66.scss
@@ -7,6 +7,10 @@
     --clr-blue-navgb-t:#577db7;
     --clr-blue-lightblue-t:rgb(229, 234, 241,0.3);
     --clr-blue-lightblue2-t:rgb(193, 205, 223,0.3);
+    --clr-primary-1: hsl(43, 86%, 17%);
+    --clr-primary-2: hsl(43, 77%, 27%);
+    --clr-primary-3: hsl(43, 72%, 37%);
+    --clr-primary-4: hsl(42, 63%, 48%);
     --clr-primary-5: hsl(42, 78%, 60%);
     --clr-primary-6: hsl(43, 89%, 70%);
     --clr-primary-8: hsl(45, 86%, 81%);
