--- a/css/Project_66.css
+++ b/css/Project_66.css
@@ -7,6 +7,10 @@
   --clr-blue-navgb-t:#577db7;
   --clr-blue-lightblue-t:rgb(229, 234, 241,0.3);
   --clr-blue-lightblue2-t:rgb(193, 205, 223,0.3);
+  --clr-primary-1: hsl(43, 86%, 17%);
+  --clr-primary-2: hsl(43, 77%, 27%);
+  --clr-primary-3: hsl(43, 72%, 37%);
+  --clr-primary-4: hsl(42, 63%, 48%);
   --clr-primary-5: hsl(42, 78%, 60%);
   --clr-primary-6: hsl(43, 89%, 70%);
   --clr-primary-8: hsl(45, 86%, 81%);
@@ -101,7 +105,7 @@ nav
 }
 .nav-center {
   display: flex;
-  width: 100%;
+  width: 100vw;
   justify-content: space-between;
   align-items: center;
 }
@@ -902,7 +906,10 @@ resume
   display: flex;
 }
 .resume .underline {
-  max-width: 100vw;
+  max-width: 90%;
+}
+.resume-title h2 {
+  font-size: 4rem;
 }
 
 .skill-cotainer {
@@ -942,7 +949,7 @@ resume
   background-color: var(--clr-primary-5);
 }
 .skill-block:hover i {
-  color: white;
+  color: rgb(106, 113, 172);
 }
 .skill-block:hover h3 {
   color: whitesmoke;
@@ -980,8 +987,8 @@ resume
     font-size: 0.8rem;
   }
   .skill-block {
-    width: 150px;
-    height: 150px;
+    width: 130px;
+    height: 130px;
   }
   .skill-block h3 {
     font-size: 1.5rem;
@@ -999,5 +1006,155 @@ resume
   }
   .resume-container-left-contect {
     display: grid;
+  }
+  .resume-title h2 {
+    font-size: 2rem;
+  }
+}
+@media screen and (max-width: 450px) {
+  .resume {
+    padding-right: 1rem;
+  }
+  .resume-container {
+    display: block;
+  }
+  .resume-container-left-contect {
+    display: grid;
+  }
+  .skill-block {
+    width: 100px;
+    height: 100px;
+  }
+  .skill-block h3 {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+    margin-top: 1rem;
+  }
+  .skill-block i {
+    font-size: 2.5rem;
+  }
+}
+/*
+=======================
+timeline
+=======================
+*/
+.timeline-cotainer {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.timeline {
+  display: grid;
+  gap: 2rem;
+  padding: 2rem 2rem;
+  border-top: 2px dashed var(--clr-primary-4);
+  position: relative;
+  margin: 0;
+}
+.timeline h2 {
+  font-size: 1.5rem;
+  letter-spacing: 0.1rem;
+  background-color: rgb(174, 202, 193);
+  width: fit-content;
+  font-weight: bolder;
+}
+.timeline p {
+  color: var(--clr-grey-6);
+  letter-spacing: 0.1rem;
+  margin-top: 1.5rem;
+  font-size: 1.2rem;
+}
+.timeline img {
+  display: grid;
+  object-fit: cover;
+  width: 100%;
+  height: auto;
+  border-radius: 20px;
+}
+.timeline-img {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-right: 2rem;
+}
+.timeline-img h2 {
+  margin: 0 auto;
+  margin-top: 1rem;
+}
+.timeline:first-child {
+  border-top: 0;
+  border-top-right-radius: 0;
+}
+.timeline:nth-child(even) {
+  grid-template-columns: 40% 60%;
+  border-left: 2px dashed var(--clr-primary-4);
+  border-top-left-radius: 2rem;
+  border-bottom-left-radius: 2rem;
+  margin-right: 2rem;
+}
+.timeline:nth-child(odd) {
+  grid-template-columns: 60% 40%;
+  border-right: 2px dashed var(--clr-primary-4);
+  border-top-right-radius: 2rem;
+  border-bottom-right-radius: 2rem;
+  margin-left: 2rem;
+}
+.timeline:last-child {
+  border-bottom-left-radius: 0;
+}
+
+@media screen and (max-width: 1100px) {
+  .timeline {
+    display: block;
+  }
+  .timeline h2 {
+    margin: 0 auto;
+  }
+  .timeline:nth-child(odd) img {
+    margin-top: 1rem;
+  }
+  .timeline:nth-child(odd) h2 {
+    margin-top: 1rem;
+  }
+  .timeline:nth-child(even) h2 {
+    margin-top: 1rem;
+  }
+}
+@media screen and (max-width: 996px) {
+  .timeline {
+    display: block;
+  }
+  .timeline h2 {
+    margin: 0 auto;
+    font-size: 1rem;
+  }
+  .timeline p {
+    font-size: 1rem;
+  }
+  .timeline:nth-child(odd) img {
+    margin-top: 1rem;
+  }
+  .timeline:nth-child(odd) h2 {
+    margin-top: 1rem;
+  }
+  .timeline:nth-child(even) h2 {
+    margin-top: 1rem;
+  }
+}
+@media screen and (max-width: 450px) {
+  .timeline {
+    display: block;
+  }
+  .timeline h2 {
+    margin: 0 auto;
+    font-size: 0.8rem;
+  }
+  .timeline p {
+    font-size: 1rem;
+    display: none;
+  }
+  .timeline-cotainer {
+    width: 95%;
   }
 }/*# sourceMappingURL=Project_66.css.map */
