--- a/scss/Project_66.scss
+++ b/scss/Project_66.scss
@@ -19,7 +19,7 @@ nav
     height: 80px;
     &-center{
         display: flex;
-        width: 100%;
+        width: 100vw;
         justify-content: space-between;
         align-items: center;
     }
@@ -893,8 +893,15 @@ resume
     }
 
     .underline{
-        max-width: 100vw;
+        max-width: 90%;
     }
+
+    &-title{
+        h2{
+            font-size: 4rem;
+        }
+    }
+
 
 }
 
@@ -934,7 +941,7 @@ resume
     &:hover
     {
         i{
-            color: white;
+            color: rgb(106, 113, 172);
         }
         h3{
             color: whitesmoke;
@@ -983,8 +990,8 @@ resume
         }
     }
     .skill-block{
-        width: 150px;
-        height: 150px;
+        width: 130px;
+        height: 130px;
     }
     .skill-block h3{
         font-size: 1.5rem;
@@ -1006,5 +1013,183 @@ resume
                 display: grid;
             }
         }
+        &-title{
+            h2{
+                font-size: 2rem;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:450px) {
+    .resume{
+        padding-right: 1rem;
+        &-container{
+            display: block;
+            &-left-contect{
+                display: grid;
+            }
+        }
+    }
+    .skill-block{
+        width: 100px;
+        height: 100px;
+    }
+    .skill-block h3{
+        font-size: 1rem;
+        margin-bottom: 0.5rem;
+        margin-top: 1rem;
+        
+    }
+    .skill-block i{
+        font-size: 2.5rem;
+    }
+}
+
+
+
+
+/*
+=======================
+timeline
+=======================
+*/
+
+.timeline-cotainer{
+    width: 80%;
+    margin: 0 auto;
+    
+    
+}
+
+.timeline{
+    display: grid;
+    
+    gap: 2rem;
+    padding: 2rem 2rem;
+    border-top: 2px dashed var(--clr-primary-4);
+    position: relative;
+    margin: 0;
+    h2{
+        font-size: 1.5rem;
+        letter-spacing: 0.1rem;
+        background-color: rgb(174, 202, 193);
+        width: fit-content;
+        font-weight: bolder;
+    }
+    p{
+        color: var(--clr-grey-6);
+        letter-spacing: 0.1rem;
+        margin-top: 1.5rem;
+        font-size: 1.2rem;
+    }
+    img{
+        display: grid;
+        object-fit: cover;
+        width: 100%;
+        height: auto;
+        border-radius: 20px;
+        
+        
+    }
+    &-img{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-right: 2rem;
+        h2{
+            margin: 0 auto;
+            margin-top: 1rem;
+        }
+    }
+    
+    &:first-child{
+        border-top: 0;
+        border-top-right-radius: 0;
+    }
+    &:nth-child(even){
+        grid-template-columns: 40% 60%;
+        border-left: 2px dashed var(--clr-primary-4);
+        border-top-left-radius: 2rem;
+        border-bottom-left-radius: 2rem;
+        margin-right: 2rem;
+    }
+    &:nth-child(odd){
+        grid-template-columns: 60% 40%;
+        border-right: 2px dashed var(--clr-primary-4);
+        border-top-right-radius: 2rem;
+        border-bottom-right-radius: 2rem;
+        margin-left: 2rem;
+    }
+    &:last-child{
+        border-bottom-left-radius: 0;
+    }
+}
+
+@media screen and (max-width:1100px) {
+    .timeline{
+        & h2{
+            margin: 0 auto;
+        }
+        display: block;
+
+        &:nth-child(odd){
+            img{
+                margin-top: 1rem;
+            }
+            & h2 {
+                margin-top: 1rem;
+            }
+        }
+        &:nth-child(even){
+            & h2{
+                margin-top: 1rem;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:996px) {
+    .timeline{
+        & h2{
+            margin: 0 auto;
+            font-size: 1rem;
+        }
+        & p{
+            font-size: 1rem;
+        }
+        display: block;
+
+        &:nth-child(odd){
+            img{
+                margin-top: 1rem;
+            }
+            & h2 {
+                margin-top: 1rem;
+            }
+        }
+        &:nth-child(even){
+            & h2{
+                margin-top: 1rem;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:450px) {
+    .timeline{
+        & h2{
+            margin: 0 auto;
+            font-size: 0.8rem;
+        }
+        & p{
+            font-size: 1rem;
+            display: none;
+        }
+        display: block;
+        
+    }
+    .timeline-cotainer{
+        width: 95%;
     }
 }
