--- a/scss/Project_66.scss
+++ b/scss/Project_66.scss
@@ -71,7 +71,7 @@ nav
     &-btn{
         display: none;
     }
-    @media screen and (max-width:1100px) {
+    @media screen and (max-width:1300px) {
         height: 60px;
         a{
             font-size: 15px;
@@ -315,7 +315,7 @@ portfolio
         grid-template-columns: repeat(auto-fill,150px);
         gap: 2rem;
         margin: 0 auto;
-        width: 100vw;
+        width: 90vw;
     }
     
     h4{
@@ -399,7 +399,7 @@ portfolio
             height: fit-content;
         }
     }
-    @media screen and (max-width:1100px) {
+    @media screen and (max-width:1300) {
         h2{
             font-size: 2rem;
         }
@@ -552,8 +552,7 @@ portfolio
             color: rgb(212, 137, 102);
         }
         .commentary{
-            width: 100vw;
-            word-wrap: break-all;
+            width: 60vw;
             padding: 2rem;
             &:hover{
                 background-color: antiquewhite;
@@ -571,13 +570,14 @@ portfolio
         display: grid;  
         grid-template-columns: max-content max-content;
         place-items: center;
+        width: 60vw;
         p{
             padding-left: 2rem;
             font-size: 1.2rem;
             font-weight: bold;
         }
     }
-    @media screen and (max-width:1100px) {
+    @media screen and (max-width:1300) {
         img{
             max-width: 200px;
         }
@@ -703,7 +703,7 @@ portfolio
         padding-left: 1rem;
     }
     
-    @media screen and (max-width:1100px) {
+    @media screen and (max-width:1300) {
         top: 60px;
     }
 }
@@ -964,7 +964,7 @@ resume
 }
 
 
-@media screen and (max-width:1100px) {
+@media screen and (max-width:1300px) {
     .resume{
         top: 60px;
         &-container{
@@ -1126,7 +1126,7 @@ timeline
     }
 }
 
-@media screen and (max-width:1100px) {
+@media screen and (max-width:1300px) {
     .timeline{
         & h2{
             margin: 0 auto;
@@ -1243,6 +1243,62 @@ computer
         }
         .answer{
             background-color: rgb(201, 201, 174);
+        }
+    }
+}
+
+
+.linux{
+    position: absolute;
+    left: 0;
+    top: 40px;
+
+    &-lr{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    header{
+        h3{
+            font-size: 1rem;
+            margin-bottom: 1rem;
+            margin-top: 0;
+            opacity: 0.7;
+        }
+    }
+    h3{
+        color: rgb(145, 48, 29);
+        height: fit-content;
+        margin-top: 0;
+        font-size: 1.5rem;
+        letter-spacing: 0.2rem;
+    }
+    &-container{
+        margin-top: 2rem;
+    }
+    &-question{
+        display:flex;
+        gap: 1rem;
+        width: fit-content;
+        padding: 0.5rem;
+        margin-top: 1rem;
+        border: 2px dotted transparent;
+        border-radius: 5px;
+        transition: var(--transition);
+        h3{
+            font-size: 1.2rem;
+            color: var(--clr-grey-5);
+            letter-spacing: 0.2rem;
+        }
+        .answer{
+            opacity: 0;
+            transition: var(--transition);
+        }
+        &:hover{
+            .answer{
+                opacity: 1;
+            }
+            border-color: rgb(96, 96, 188);
+            background-color: rgb(239, 234, 221);
         }
     }
 }
